--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
   <a class="navbar-brand" href="#">Be A Pro</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -19,6 +19,9 @@
     </ul>
     
     <div class="nav-item dropdown mr-5">
+
+      
+      {% if user.is_authenticated %}
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Account
       </a>
@@ -28,6 +31,10 @@
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#">Log out</a>
       </div>
+      {%else%}
+      <a href="/accounts/register/" class="mr-4">Register</a>
+      <a href="/accounts/login" class="mr-4">Login</a>
+      {%endif%}
     </div>
   </div>
 </nav>
