--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -29,7 +29,7 @@
         <a class="dropdown-item" href="#">Action</a>
         <a class="dropdown-item" href="#">Another action</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Log out</a>
+        <a class="dropdown-item" href="/accounts/logout">Log out</a>
       </div>
       {%else%}
       <a href="/accounts/register/" class="mr-4">Register</a>
