ft:Working django authentication, with profile creation using signals, updating profile too, Login and Log out working

--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -26,8 +26,8 @@
         Account
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="{% url 'profile'%}">Profile</a>
+        <a class="dropdown-item" href="{% url 'updateprofile'%}">Update Profile</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="/accounts/logout">Log out</a>
       </div>
