--- a/award/templates/registration/login.html
+++ b/award/templates/registration/login.html
@@ -18,7 +18,7 @@
           <h3 class="text-center">Welcome Back Pro</h3>
         </div>
         <div class="panel-body">
-          <form action="/accounts/register" method="POST">
+          <form action="/accounts/login/" method="POST">
             {%csrf_token%}
             {% bootstrap_form form %}
             <div class="form-group">
