Adds feature to upload a project, and the skeleton to facilitate the viewing of a single prject, as well as additional fields to the project model

--- a/award/templates/profile/single_profile.html
+++ b/award/templates/profile/single_profile.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <h3> {{current_user.username}}'s Projects</h3>
-  
+  <a href="{% url 'uploadproject' %}">Upload a Project</a>
 </div>
 
 {%endblock%}
