ft:working view of  a single prpject

--- a/award/templates/project/single_project.html
+++ b/award/templates/project/single_project.html
@@ -4,9 +4,13 @@
 {%block content%}
 {{block.super}}
 <div class="container">
-  <p>{{project.title}}</p>
+  <div style="margin-top: 100px;">
+    <p>{{project.title}}</p>
   <p>{{project.description}}</p>
   <p>{{project.live_site}}</p>
   <p>{{project.profile}}</p>
+
+  </div>
+  
 </div>
 {%endblock%}
