--- a/award/templates/profile/single_profile.html
+++ b/award/templates/profile/single_profile.html
@@ -28,10 +28,10 @@
   <h3> {{current_user.username}}'s Projects</h3>
   <div>
     {%for project in projects%}
-      <p>{{project.title}}</p>
+     <a href="{%url 'singleproject' project.id%}"><p>{{project.title}}</p></a> 
       <img src="{{project.landing_page.url}}" alt="{{project.title}}">
       <p>{{project.pub_date}}</p>
-
+    {%endfor%}
   </div>
   <a href="{% url 'uploadproject' %}">Upload a Project</a>
 </div>
