--- a/award/templates/project/single_project.html
+++ b/award/templates/project/single_project.html
@@ -9,7 +9,17 @@
   <p>{{project.description}}</p>
   <p>{{project.live_site}}</p>
   <p>{{project.profile}}</p>
-
+  </div>
+  <div>
+    <h3>Ratings</h3>
+    {% for rating in ratings%}
+      <p>{{rating.profilr}}</p>
+      <p></p>
+      <p></p>
+      <p></p>
+  </div>
+  <div>
+    <a href="{% url 'rateproject' project.id %}">Rate</a>
   </div>
   
 </div>
