--- a/award/templates/welcome.html
+++ b/award/templates/welcome.html
@@ -1,9 +1,19 @@
 {% extends 'base.html' %}
+{%load static%}
 
 {% block content%}
 {{block.super}}
-<div class="container">
+<div class="container" style="margin-top: 100px;">
   <h2>Welcome</h2>
+</div>
+<div>
+  {%for project in projects%}
+    <div>
+      <a href="{%url 'singleproject' project.id %}"><p>{{project.title}}</p></a> 
+      <img src="{{project.landing_page.url}}" alt="" width="200" height="200">
+      <p>{{project.profile}}</p>
+    </div>
+    {%endfor%}
 </div>
 
 {% endblock %}
