--- a/award/templates/base.html
+++ b/award/templates/base.html
@@ -29,6 +29,8 @@
     {%block scripts%}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     {% bootstrap_javascript%}
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+    <script src="{% static 'js/welcome.js' %}"></script>
     {%endblock%}
   </body>
   </html>
