--- a/award/templates/profile/single_profile.html
+++ b/award/templates/profile/single_profile.html
@@ -23,17 +23,22 @@
       </div>
     </div>
     <div class="col-md-3">
+      <a href="{% url 'uploadproject' %}">Upload a Project</a>
     </div>
   </div>
   <h3> {{current_user.username}}'s Projects</h3>
-  <div>
+  <div class="row">
+
     {%for project in projects%}
-     <a href="{%url 'singleproject' project.id%}"><p>{{project.title}}</p></a> 
-      <img src="{{project.landing_page.url}}" alt="{{project.title}}">
+    <div class="col-md-4 col-lg-3 col-sm-6 col-xs-12">
+      <a href="{%url 'singleproject' project.id%}"><p>{{project.title}}</p></a> 
+      <img src="{{project.landing_page.url}}" alt="{{project.title}}" width="200" height="200">
       <p>{{project.pub_date}}</p>
+    </div>
+     
     {%endfor%}
   </div>
-  <a href="{% url 'uploadproject' %}">Upload a Project</a>
+  
 </div>
 
 {%endblock%}
