--- a/award/templates/project/single_project.html
+++ b/award/templates/project/single_project.html
@@ -14,10 +14,10 @@
     <h3>Ratings</h3>
     {% for rating in ratings%}
       <p>{{rating.profile}}</p>
-      <p>{{rating.design}}</p>
-      <p>{{rating.usability}}</p>
-      <p>{{rating.content}}</p>
-      <p>{{rating.average}}</p>
+      <p>Design: {{rating.design}} Usability: {{rating.usability}} Content: {{rating.content}} Content: {{rating.content}}</p>
+      <p></p>
+      <p>Content: {{rating.content}}</p>
+      <p>Average: {{rating.average}}</p>
     {%endfor%}
   </div>
   <div>
