--- a/award/templates/welcome.html
+++ b/award/templates/welcome.html
@@ -1,19 +1,27 @@
 {% extends 'base.html' %}
 {%load static%}
 
+{% block styles%}
+{{block.super}}
+<link rel="stylesheet" href="{% static 'css/welcome.css'%}">
+
+{%endblock%}
+
 {% block content%}
 {{block.super}}
 <div class="container" style="margin-top: 100px;">
-  <h2>Welcome</h2>
-</div>
-<div>
-  {%for project in projects%}
-    <div>
-      <a href="{%url 'singleproject' project.id %}"><p>{{project.title}}</p></a> 
-      <img src="{{project.landing_page.url}}" alt="" width="200" height="200">
-      <p>{{project.profile}}</p>
+  <div class="row grid">
+    {%for project in projects%}
+    <div class=" grid_item col-md-4 col-lg-3 col-sm-6 col-xs-12">
+      <div class="card" style="width: 18rem;">
+        <img src="{{project.landing_page.url}}" alt="">
+        <div class="card-body">
+          <a href="{%url 'singleproject' project.id %}"><h5 class="card-title">{{project.title}}</h5></a>
+          <p class="card-text">By {{project.profile}}</p>
+        </div>
+      </div>
     </div>
     {%endfor%}
+  </div>
 </div>
-
 {% endblock %}
