--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -1,3 +1,6 @@
+{%load static%}
+
+ <link rel="stylesheet" href="{% static 'css/welcome.css'%}">
 <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
   <a class="navbar-brand" href="/">Be A Pro</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
