--- a/award/templates/profile/base.html
+++ b/award/templates/profile/base.html
@@ -17,6 +17,8 @@
     {%endif%}
     {% block styles%}
     {%bootstrap_css%}
+    <link rel="stylesheet" href="{% static 'css/profile.css'%}">
+    <link href="https://fonts.googleapis.com/css2?family=Bellota:ital@1&family=Kaushan+Script&family=Piedra&display=swap" rel="stylesheet">
     {%endblock%}
 
   </head>
