--- a/award/templates/profile/single_profile.html
+++ b/award/templates/profile/single_profile.html
@@ -5,16 +5,16 @@
 {{block.super}}
 <div class="container text-center">
   <div class="row" style="margin-top:100px ;">
-    <div class="col-md-3">
+    <div class="col-md-2">
     </div>
-    <div class="col-md-6">
+    <div class="col-md-7">
       <div>
         <table class="table table-borderless">
           <tr>
             <td>
               <img src="{{userprofile.picture.url}}" alt="picture" width="200" height="200" class="profpicimg">
             </td>
-            <td>
+            <td style="padding-top: 60px;">
               <p>{{current_user.username}}</p>
               <p>{{userprofile.bio}}</p>
             </td>
@@ -23,7 +23,10 @@
       </div>
     </div>
     <div class="col-md-3">
-      <a href="{% url 'uploadproject' %}">Upload a Project</a>
+      <div style="margin-top:70px ;">
+        <a href="{% url 'uploadproject' %}" class="btn btn-outline-success">Upload a Project</a>
+      </div>
+      
     </div>
   </div>
   <h3> {{current_user.username}}'s Projects</h3>
@@ -31,14 +34,17 @@
 
     {%for project in projects%}
     <div class="col-md-4 col-lg-3 col-sm-6 col-xs-12">
-      <a href="{%url 'singleproject' project.id%}"><p>{{project.title}}</p></a> 
-      <img src="{{project.landing_page.url}}" alt="{{project.title}}" width="200" height="200">
-      <p>{{project.pub_date}}</p>
+      <a href="{%url 'singleproject' project.id%}">
+        <p>{{project.title}}</p>
+      </a>
+      <img src="{{project.landing_page.url}}" alt="{{project.title}}" width="250" height="200" ><br>
+      <blockquote><a href="{{project.live_site}}">{{project.live_site}}</a></blockquote>
+      <cite class="text-muted">posted {{project.pub_date|timesince}} ago</cite>
     </div>
-     
+
     {%endfor%}
   </div>
-  
+
 </div>
 
 {%endblock%}
