--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -6,3 +6,13 @@ img{
   max-width: 100%;
   max-height: 100%;
 }
+.navbar-brand{
+  font-family: 'Kaushan Script', cursive;
+  font-size: 30px;
+}
+.nav-link{
+  font-family: 'Bellota', cursive;
+  font-size: larger;
+  margin-left: 20px;
+  font-weight: 800;
+}
