--- a/award/templates/profile/base.html
+++ b/award/templates/profile/base.html
@@ -18,7 +18,7 @@
     {% block styles%}
     {%bootstrap_css%}
     <link rel="stylesheet" href="{% static 'css/profile.css'%}">
-    <link href="https://fonts.googleapis.com/css2?family=Bellota:ital@1&family=Kaushan+Script&family=Piedra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bellota:ital@1&family=Gloria+Hallelujah&family=Kaushan+Script&family=Piedra&display=swap" rel="stylesheet">
     {%endblock%}
 
   </head>
