Added a background colour

--- a/award/templates/base.html
+++ b/award/templates/base.html
@@ -18,7 +18,8 @@
     {% block styles%}
     {%bootstrap_css%}
     <link rel="stylesheet" href="{% static 'css/welcome.css'%}">
-    <link href="https://fonts.googleapis.com/css2?family=Bellota:ital@1&family=Kaushan+Script&family=Piedra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bellota:ital@1&family=Gloria+Hallelujah&family=Kaushan+Script&family=Piedra&family=Raleway:ital,wght@1,600&family=Special+Elite&display=swap" rel="stylesheet">
+
     {%endblock%}
 
   </head>
