--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -1,7 +1,7 @@
 {%load static%}
 
  <link rel="stylesheet" href="{% static 'css/welcome.css'%}">
-<nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+<nav class="navbar navbar-expand-sm navbar-light  fixed-top">
   <a class="navbar-brand" href="/">Be A Pro</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -16,12 +16,14 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Profiles</a>
       </li>
-      
     </ul>
-    
-    <div class="nav-item dropdown mr-5">
-
+    <div class="mx-auto">
+    <form class="form-inline " action="" role="search">
+      <input class="form-control mr-sm-2 " type="search" placeholder=" search " aria-label="Search" name="searchname">
       
+    </form>
+  </div>
+    <div class="nav-item dropdown mr-5">
       {% if user.is_authenticated %}
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Account
