--- a/award/templates/welcome.html
+++ b/award/templates/welcome.html
@@ -12,8 +12,8 @@
       <div class="card">
         <img src="{{project.landing_page.url}}" alt="">
         <div class="card-body">
-          <a href="{%url 'singleproject' project.id %}"><h5 class="card-title">{{project.title}}</h5></a>
-          <p class="card-text">By {{project.profile}}</p>
+          <a href="{%url 'singleproject' project.id %}"><h5 class="card-title titles">{{project.title}}</h5></a>
+          <p class="card-text names">By {{project.profile}}</p>
         </div>
       </div>
     </div>
