--- a/award/templates/django_registration/base.html
+++ b/award/templates/django_registration/base.html
@@ -17,6 +17,8 @@
     {%endif%}
     {% block styles%}
     {%bootstrap_css%}
+    <link href="https://fonts.googleapis.com/css2?family=Bellota:ital@1&family=Gloria+Hallelujah&family=Kaushan+Script&family=Piedra&family=Raleway:ital,wght@1,600&family=Special+Elite&display=swap" rel="stylesheet">
+
     {%endblock%}
 
   </head>
