--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -7,10 +7,14 @@
 }
 
 .titles{
-  font-family: 'Gloria Hallelujah', cursive;
+  font-family: 'Bellota', cursive;
   font-size: 25px;
 }
 
 .box{
   margin-top: 20px;
+}
+
+body{
+  background-color: rgba(100,200,100, 0.3);
 }
