--- a/static/css/welcome.css
+++ b/static/css/welcome.css
@@ -13,3 +13,15 @@ img{
   margin-left: 20px;
   font-weight: 800;
 }
+body{
+  background-color: rgba(100,200,100, 0.3);
+}
+
+.names{
+  font-family: 'Raleway', sans-serif;
+  
+}
+.titles{
+  font-family: 'Bellota', cursive;
+  font-size: 25px;
+}
