ft:search for projects

--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -18,8 +18,8 @@
       </li>
     </ul>
     <div class="mx-auto">
-    <form class="form-inline " action="" role="search">
-      <input class="form-control mr-sm-2 " type="search" placeholder=" search " aria-label="Search" name="searchname">
+    <form class="form-inline " action="{% url 'projectsearch'%}" role="search">
+      <input class="form-control mr-sm-2 " type="search" placeholder=" search project " aria-label="Search" name="searchproject">
       
     </form>
   </div>
