--- a/award/templates/navbar.html
+++ b/award/templates/navbar.html
@@ -2,6 +2,7 @@
 
  <link rel="stylesheet" href="{% static 'css/welcome.css'%}">
 <nav class="navbar navbar-expand-sm navbar-light  fixed-top">
+  <img src="{% static 'images/Black Businessman.png'%}" alt="black-business-man" width="70" height="70">
   <a class="navbar-brand" href="/">Be A Pro</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -29,14 +30,14 @@
         Account
       </a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="{% url 'profile'%}">Profile</a>
-        <a class="dropdown-item" href="{% url 'updateprofile'%}">Update Profile</a>
+        <a class="dropdown-item nav-link" href="{% url 'profile'%}">Profile</a>
+        <a class="dropdown-item nav-link" href="{% url 'updateprofile'%}">Update Profile</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="/accounts/logout">Log out</a>
+        <a class="dropdown-item nav-link" href="/accounts/logout">Log out</a>
       </div>
       {%else%}
-      <a href="/accounts/register/" class="mr-4">Register</a>
-      <a href="/accounts/login" class="mr-4">Login</a>
+      <a href="/accounts/register/" class="mr-4 ">Register</a>
+      <a href="/accounts/login" class="mr-4 ">Login</a>
       {%endif%}
     </div>
   </div>
