--- a/award/templates/project/rate_project.html
+++ b/award/templates/project/rate_project.html
@@ -4,9 +4,9 @@
 
 {%block content%}
 {{block.super}}
-  <div class="container">
-    <div>
-      <img src="{{project.landing_page.url}}" alt="" width="100" height="100">
+  <div class="container" style="margin-top: 100px;">
+    <div class="text-center">
+      <img src="{{project.landing_page.url}}" alt="" width="300" height="200">
     </div>
     <div>
       <form action="{%url 'rateproject' project.id%}" method="POST">
